Fix Industry label wrapping and sync with Supplier

--- a/enrolment/static/sass/company-profile-details.scss
+++ b/enrolment/static/sass/company-profile-details.scss
@@ -188,10 +188,12 @@
   padding: 22px;
 }
 
-.stone-label {
+.stone-label,
+.stone-label:focus {
   background: $stone;
   border-radius: 6px;
   color: $mid-grey;
+  display: inline-block;
   font-size: 1em;
   font-weight: 300;
   margin: 0 5px 8px 0;
